plugins/flutter/pocketpy/lib/pocketpy_bindings_generated.dart


  /// Convert a `str` object in python to `c11_sv`.
  c11_sv py_tosv(
    py_Ref arg0,
  ) {
    return _py_tosv(
      arg0,
    );
  }

  late final _py_tosvPtr =
      _lookup<ffi.NativeFunction<c11_sv Function(py_Ref)>>('py_tosv');
  late final _py_tosv = _py_tosvPtr.asFunction<c11_sv Function(py_Ref)>();

  /// Convert a `bytes` object in python to char array.
  ffi.Pointer<ffi.UnsignedChar> py_tobytes(
    py_Ref arg0,
    ffi.Pointer<ffi.Int> size,
  ) {
    return _py_tobytes(
      arg0,
      size,
    );
  }

  late final _py_tobytesPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(
              py_Ref, ffi.Pointer<ffi.Int>)>>('py_tobytes');
  late final _py_tobytes = _py_tobytesPtr.asFunction<
      ffi.Pointer<ffi.UnsignedChar> Function(py_Ref, ffi.Pointer<ffi.Int>)>();

  /// Resize a `bytes` object. It can only be resized down.
  void py_bytes_resize(
    py_Ref arg0,
    int size,
  ) {
    return _py_bytes_resize(
      arg0,
      size,
    );
  }

  late final _py_bytes_resizePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref, ffi.Int)>>(
          'py_bytes_resize');
  late final _py_bytes_resize =
      _py_bytes_resizePtr.asFunction<void Function(py_Ref, int)>();

  /// Convert a user-defined object to its userdata.
  ffi.Pointer<ffi.Void> py_touserdata(
    py_Ref arg0,
  ) {
    return _py_touserdata(
      arg0,
    );
  }

  late final _py_touserdataPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(py_Ref)>>(
          'py_touserdata');
  late final _py_touserdata =
      _py_touserdataPtr.asFunction<ffi.Pointer<ffi.Void> Function(py_Ref)>();

  /// Get the type of the object.
  int py_typeof(
    py_Ref self,
  ) {
    return _py_typeof(
      self,
    );
  }

  late final _py_typeofPtr =
      _lookup<ffi.NativeFunction<py_Type Function(py_Ref)>>('py_typeof');
  late final _py_typeof = _py_typeofPtr.asFunction<int Function(py_Ref)>();

  /// Get type by module and name. e.g. `py_gettype("time", py_name("struct_time"))`.
  /// Return `0` if not found.
  int py_gettype(
    ffi.Pointer<ffi.Char> module,
    int name,
  ) {
    return _py_gettype(
      module,
      name,
    );
  }

  late final _py_gettypePtr = _lookup<
          ffi.NativeFunction<py_Type Function(ffi.Pointer<ffi.Char>, py_Name)>>(
      'py_gettype');
  late final _py_gettype =
      _py_gettypePtr.asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  /// Check if the object is exactly the given type.
  bool py_istype(
    py_Ref arg0,
    int arg1,
  ) {
    return _py_istype(
      arg0,
      arg1,
    );
  }

  late final _py_istypePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Type)>>(
          'py_istype');
  late final _py_istype =
      _py_istypePtr.asFunction<bool Function(py_Ref, int)>();

  /// Check if the object is an instance of the given type.
  bool py_isinstance(
    py_Ref obj,
    int type,
  ) {
    return _py_isinstance(
      obj,
      type,
    );
  }

  late final _py_isinstancePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Type)>>(
          'py_isinstance');
  late final _py_isinstance =
      _py_isinstancePtr.asFunction<bool Function(py_Ref, int)>();

  /// Check if the derived type is a subclass of the base type.
  bool py_issubclass(
    int derived,
    int base,
  ) {
    return _py_issubclass(
      derived,
      base,
    );
  }

  late final _py_issubclassPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Type, py_Type)>>(
          'py_issubclass');
  late final _py_issubclass =
      _py_issubclassPtr.asFunction<bool Function(int, int)>();

  /// Get the magic method from the given type only.
  /// The returned reference is always valid. However, its value may be `nil`.
  py_GlobalRef py_tpgetmagic(
    int type,
    int name,
  ) {
    return _py_tpgetmagic(
      type,
      name,
    );
  }

  late final _py_tpgetmagicPtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function(py_Type, py_Name)>>(
          'py_tpgetmagic');
  late final _py_tpgetmagic =
      _py_tpgetmagicPtr.asFunction<py_GlobalRef Function(int, int)>();

  /// Search the magic method from the given type to the base type.
  /// Return `NULL` if not found.
  py_GlobalRef py_tpfindmagic(
    int arg0,
    int name,
  ) {
    return _py_tpfindmagic(
      arg0,
      name,
    );
  }

  late final _py_tpfindmagicPtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function(py_Type, py_Name)>>(
          'py_tpfindmagic');
  late final _py_tpfindmagic =
      _py_tpfindmagicPtr.asFunction<py_GlobalRef Function(int, int)>();

  /// Search the name from the given type to the base type.
  /// Return `NULL` if not found.
  py_ItemRef py_tpfindname(
    int arg0,
    int name,
  ) {
    return _py_tpfindname(
      arg0,
      name,
    );
  }

  late final _py_tpfindnamePtr =
      _lookup<ffi.NativeFunction<py_ItemRef Function(py_Type, py_Name)>>(
          'py_tpfindname');
  late final _py_tpfindname =
      _py_tpfindnamePtr.asFunction<py_ItemRef Function(int, int)>();

  /// Get the type object of the given type.
  py_GlobalRef py_tpobject(
    int type,
  ) {
    return _py_tpobject(
      type,
    );
  }

  late final _py_tpobjectPtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function(py_Type)>>(
          'py_tpobject');
  late final _py_tpobject =
      _py_tpobjectPtr.asFunction<py_GlobalRef Function(int)>();

  /// Get the type name.
  ffi.Pointer<ffi.Char> py_tpname(
    int type,
  ) {
    return _py_tpname(
      type,
    );
  }

  late final _py_tpnamePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(py_Type)>>(
          'py_tpname');
  late final _py_tpname =
      _py_tpnamePtr.asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// Call a type to create a new instance.
  bool py_tpcall(
    int type,
    int argc,
    py_Ref argv,
  ) {
    return _py_tpcall(
      type,
      argc,
      argv,
    );
  }

  late final _py_tpcallPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Type, ffi.Int, py_Ref)>>(
          'py_tpcall');
  late final _py_tpcall =
      _py_tpcallPtr.asFunction<bool Function(int, int, py_Ref)>();

  /// Check if the object is an instance of the given type.
  /// Raise `TypeError` if the check fails.
  bool py_checktype(
    py_Ref self,
    int type,
  ) {
    return _py_checktype(
      self,
      type,
    );
  }

  late final _py_checktypePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Type)>>(
          'py_checktype');
  late final _py_checktype =
      _py_checktypePtr.asFunction<bool Function(py_Ref, int)>();

  /// Get the i-th register.
  /// All registers are located in a contiguous memory.
  py_GlobalRef py_getreg(
    int i,
  ) {
    return _py_getreg(
      i,
    );
  }

  late final _py_getregPtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function(ffi.Int)>>('py_getreg');
  late final _py_getreg =
      _py_getregPtr.asFunction<py_GlobalRef Function(int)>();

  /// Set the i-th register.
  void py_setreg(
    int i,
    py_Ref val,
  ) {
    return _py_setreg(
      i,
      val,
    );
  }

  late final _py_setregPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Int, py_Ref)>>(
          'py_setreg');
  late final _py_setreg =
      _py_setregPtr.asFunction<void Function(int, py_Ref)>();

  /// Get variable in the `__main__` module.
  py_ItemRef py_getglobal(
    int name,
  ) {
    return _py_getglobal(
      name,
    );
  }

  late final _py_getglobalPtr =
      _lookup<ffi.NativeFunction<py_ItemRef Function(py_Name)>>('py_getglobal');
  late final _py_getglobal =
      _py_getglobalPtr.asFunction<py_ItemRef Function(int)>();

  /// Set variable in the `__main__` module.
  void py_setglobal(
    int name,
    py_Ref val,
  ) {
    return _py_setglobal(
      name,
      val,
    );
  }

  late final _py_setglobalPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Name, py_Ref)>>(
          'py_setglobal');
  late final _py_setglobal =
      _py_setglobalPtr.asFunction<void Function(int, py_Ref)>();

  /// Get variable in the `builtins` module.
  py_ItemRef py_getbuiltin(
    int name,
  ) {
    return _py_getbuiltin(
      name,
    );
  }

  late final _py_getbuiltinPtr =
      _lookup<ffi.NativeFunction<py_ItemRef Function(py_Name)>>(
          'py_getbuiltin');
  late final _py_getbuiltin =
      _py_getbuiltinPtr.asFunction<py_ItemRef Function(int)>();

  /// Equivalent to `*dst = *src`.
  void py_assign(
    py_Ref dst,
    py_Ref src,
  ) {
    return _py_assign(
      dst,
      src,
    );
  }

  late final _py_assignPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref, py_Ref)>>(
          'py_assign');
  late final _py_assign =
      _py_assignPtr.asFunction<void Function(py_Ref, py_Ref)>();

  /// Get the last return value.
  py_GlobalRef py_retval() {
    return _py_retval();
  }

  late final _py_retvalPtr =
      _lookup<ffi.NativeFunction<py_GlobalRef Function()>>('py_retval');
  late final _py_retval = _py_retvalPtr.asFunction<py_GlobalRef Function()>();

  /// Get an item from the object's `__dict__`.
  /// Return `NULL` if not found.
  py_ItemRef py_getdict(
    py_Ref self,
    int name,
  ) {
    return _py_getdict(
      self,
      name,
    );
  }

  late final _py_getdictPtr =
      _lookup<ffi.NativeFunction<py_ItemRef Function(py_Ref, py_Name)>>(
          'py_getdict');
  late final _py_getdict =
      _py_getdictPtr.asFunction<py_ItemRef Function(py_Ref, int)>();

  /// Set an item to the object's `__dict__`.
  void py_setdict(
    py_Ref self,
    int name,
    py_Ref val,
  ) {
    return _py_setdict(
      self,
      name,
      val,
    );
  }

  late final _py_setdictPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(py_Ref, py_Name, py_Ref)>>(
          'py_setdict');
  late final _py_setdict =
      _py_setdictPtr.asFunction<void Function(py_Ref, int, py_Ref)>();

  /// Delete an item from the object's `__dict__`.
  /// Return `true` if the deletion is successful.
  bool py_deldict(
    py_Ref self,
    int name,
  ) {
    return _py_deldict(
      self,
      name,
    );
  }

  late final _py_deldictPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(py_Ref, py_Name)>>(
          'py_deldict');
  late final _py_deldict =
      _py_deldictPtr.asFunction<bool Function(py_Ref, int)>();

  /// Prepare an insertion to the object's `__dict__`.
  py_ItemRef py_emplacedict(
    py_Ref self,
    int name,
  ) {
    return _py_emplacedict(
      self,
      name,
    );
  }

  late final _py_emplacedictPtr =
      _lookup<ffi.NativeFunction<py_ItemRef Function(py_Ref, py_Name)>>(
          'py_emplacedict');
  late final _py_emplacedict =
      _py_emplacedictPtr.asFunction<py_ItemRef Function(py_Ref, int)>();

  /// Apply a function to all items in the object's `__dict__`.
  /// Return `true` if the function is successful for all items.
  /// NOTE: Be careful if `f` modifies the object's `__dict__`.
  bool py_applydict(
    py_Ref self,
    ffi.Pointer<
            ffi.NativeFunction<
                ffi.Bool Function(
                    py_Name name, py_Ref val, ffi.Pointer<ffi.Void> ctx)>>
        f,
    ffi.Pointer<ffi.Void> ctx,
  ) {
    return _py_applydict(
      self,
      f,
      ctx,
    );
  }
